<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  abaja_bringup - Launch/bringup package for the aBAJA buggy
  
  This package contains launch files that bring up the complete
  robot system by combining description, teleop, and other packages.
-->
<package format="3">
  <name>abaja_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for the aBAJA autonomous buggy</description>
  <maintainer email="team@abaja.com">aBAJA Team</maintainer>
  <license>MIT</license>

  <!-- Build tool for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies on other aBAJA packages -->
  <exec_depend>abaja_description</exec_depend>
  <exec_depend>abaja_teleop</exec_depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Core ROS2 dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
