<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abaja_planning</name>
  <version>0.1.0</version>
  <description>Path planning, Nav2 integration, waypoint following, and traffic signal logic for the aBAJA autonomous buggy</description>
  <maintainer email="team@abaja.com">aBAJA Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS2 -->
  <exec_depend>rclpy</exec_depend>

  <!-- Message types -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Nav2 action messages (for waypoint follower) -->
  <exec_depend>nav2_msgs</exec_depend>

  <!-- aBAJA custom interfaces -->
  <exec_depend>abaja_interfaces</exec_depend>

  <!-- TF -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- YAML parsing -->
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
