<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  abaja_teleop - Keyboard teleoperation package for the aBAJA buggy
  
  Provides a keyboard-based teleoperation node that publishes
  geometry_msgs/Twist messages to /cmd_vel for controlling the buggy.
-->
<package format="3">
  <name>abaja_teleop</name>
  <version>0.1.0</version>
  <description>Keyboard teleoperation node for the aBAJA autonomous buggy</description>
  <maintainer email="team@abaja.com">aBAJA Team</maintainer>
  <license>MIT</license>

  <!-- Build tool for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
